--- a/core/components/semanager/docs/changelog.txt
+++ b/core/components/semanager/docs/changelog.txt
@@ -1,3 +1,7 @@
+0.2.2 (January 28, 2015)
+================================
+- Added plugin for automatic creating elements from files
+
 0.2.1 (March 29, 2014)
 ================================
 - [#11] Added compatibility with AjaxManager plugin
